chore: Java modernization – replace collect(Collectors.toList()) with toList()
Change-Id: I8c5a305979b516be9e06adc9cc5c386e50fff818